--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -35,6 +35,8 @@ body {
 
 .navbar a {
     margin-left: auto;
+    text-decoration: none;
+    color: black;
 }
 
 .header {
@@ -42,6 +44,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    margin: 10px;
 }
 
 .main {
@@ -78,7 +82,7 @@ body {
 .ingredients ul {
     display: flex;
     flex: 1 1 auto;
-    margin-left: 30px;
+    margin-left: 16px;
     flex-direction: column;
 }
 
@@ -92,5 +96,5 @@ body {
 }
 
 .steps ol {
-    margin-left: 30px;
+    margin-left: 18px;
 }
